ADAP-104: Upgrade Air adapter 6.0.2

--- a/web/app.json
+++ b/web/app.json
@@ -16,7 +16,7 @@
     "nonPersistant": true
   },
   "runtime": {
-    "arguments": " --v=1 ",
-    "version": "beta"
+    "arguments": " --v=1 --framestrategy=frames ",
+    "version": "8.56.26.2"
   }
 }
